--- a/jquery-effect-practice/index.html
+++ b/jquery-effect-practice/index.html
@@ -18,7 +18,7 @@
     <div class="showUp">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, dolor ea. Dolorem facere quod, suscipit porro molestiae quaerat, dolore quia recusandae a accusamus amet. Ad sequi voluptate excepturi ipsa consequuntur?</div><br><br>
     <button class="animatBtn">Start Animation</button><br><br>
     <div class="div4"></div>
-    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="../jQuery/jquery-3.5.1.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
