--- a/jquery-animation-practice/index.html
+++ b/jquery-animation-practice/index.html
@@ -19,7 +19,7 @@
     <p class="hideMe">Hi, please hide me</p><br><br>
     <div class="div6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae eos repudiandae sed veritatis vero. Necessitatibus dignissimos, dicta, tempora neque odio quibusdam, blanditiis tenetur iste pariatur animi vel sit debitis modi.</div><br><br>
     <button class="toggleBtn">ToggleEffect</button><br><br>
-    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="../jQuery/jquery-3.5.1.min.js"></script>
     <script src="./js/index.js"></script>
 </body>
 </html>
