--- a/jquery-attr-practice/index.html
+++ b/jquery-attr-practice/index.html
@@ -16,7 +16,25 @@
     <button class="html">HTML</button>
     <p>Name : <input type="text" value="Enter Your Name" class="input"></p>
     <button class="inputValidation">Submit</button>
-    <script src="./js/jquery-3.5.1.min.js"></script>
+
+    <br><br>
+    <p class="lorem1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, repellendus!</p>
+    <p class="lorem2">Lorem ipsum</p>
+    <p>Name: <input type="text" class="lorem3" value="Your name"></p>
+    <button class="btn1">set text</button>
+    <button class="btn2">set html</button>
+    <button class="btn3">set value</button><br><br>
+    <a id="hiAnchor" href="http://www.google.com">Anchor</a><br><br><!-- this is not working now -->
+    <button id="btn4">click here</button><br><br>
+    <img width="100px" height="100px" src="./habib fiver.jpg" alt="" class="images"><br><br>
+    <button class="btn5">insert brfore</button>
+    <button class="btn6">insert after</button>
+    <p class="add">Lorem ipsum dolor sit amet.</p>
+    <button class="btn7">click append</button>
+    <button class="btn8">click prepend</button>
+    
+
+    <script src="../jQuery/jquery-3.5.1.min.js"></script>
     <script src="./js/index.js"></script>
 </body>
 </html>
