--- a/jquery-basic-practice/index.html
+++ b/jquery-basic-practice/index.html
@@ -60,7 +60,7 @@
 
 
 
-    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="../jQuery/jquery-3.5.1.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
